--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -82,4 +82,16 @@
     color: $red;
     border-bottom-color: $red;
   }
+
+  &:valid:-webkit-autofill {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: $dark-green;
+    border-bottom-color: $dark-green;
+  }
+
+  &:invalid:-webkit-autofill {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: $red;
+    border-bottom-color: $red;
+  }
 }
