--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,7 @@
 .page {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  
   &__body {
     background-color: $light-brown;
     min-width: 320px;
